<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--tools:showIn="@layout/fragment_profile">-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/tipl_logemailrnum"
            android:gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/regsterd_mbno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:cursorVisible="true"
                android:hint="Email Id / Phone Number"
                android:background="@color/transparent"
                android:textColorHint="@color/colorchange"
                android:textSize="19sp"
                android:textColor="@color/colorchange"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorBlack"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tipl_logpassword">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="1"
                android:padding="10dp"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:textColor="@color/colorchange"
                android:textColorHint="@color/colorchange"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorBlack"/>

        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:text="@string/terms_condtns"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:buttonTint="@color/colorchange"
            android:checked="true"
            android:textColor="@color/colorchange"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorchange"
            android:text="@string/signin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/forget_pswd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorRedDark"
                android:textAllCaps="false"
                android:text="@string/forget_pswd"/>

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="@color/colorGrayDark"-->
            <!--android:text="|"/>-->

            <Button
                android:id="@+id/create_act"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorRedDark"
                android:textAllCaps="false"
                android:text="@string/create_act"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>