<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.saxxis.saanpaydestributor.activities.recharge.MobileRechargePrepaidActivity"
    tools:showIn="@layout/activity_mobile_recharge_prepaid">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/prepaid"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_mble_num"
            android:textAllCaps="false"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/rgv_prepostpaid"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="16sp"
            android:id="@+id/rb_prepaid"
            android:text="@string/prepaid"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:id="@+id/rb_postpaid"
            android:textSize="16sp"
            android:text="@string/postpaid"/>

    </RadioGroup>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mobile Number">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <android.support.design.widget.TextInputEditText
                android:id="@+id/p_mobile_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/contacts"
                android:layout_width="wrap_content"
                android:layout_height="34dp"

                android:layout_alignEnd="@+id/p_mobile_num"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/phonebook"
                android:paddingBottom="5dp"
                android:tint="@color/colorPrimary" />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operaters"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>

        <TextView
            android:id="@+id/p_operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:drawableRight="@drawable/dropdown"
            android:padding="10dp"
            android:text="Select Provider" />

    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="16sp"
           android:textAllCaps="false"
           android:layout_weight="1"
           android:visibility="gone"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="10dp"
           android:gravity="center_vertical"
           android:drawableStart="@drawable/rupee"
           android:drawableLeft="@drawable/rupee"
           android:textColor="@color/colorPrimaryDark"
           android:text="@string/amount"
           android:textAppearance="@style/TextAppearance.AppCompat.Button" />


       <TextView
           android:id="@+id/p_btn_browse_plans"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="Browse Plans"
           android:textAllCaps="false"
           android:gravity="right"
           android:textColor="@color/colorBlueLight"
           android:textStyle="bold"
           android:enabled="false" />

   </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Amount"
            android:layout_marginLeft="10dp">
        </TextView>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/p_amount_mble_rchg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@android:color/transparent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorGray"/>

    <TextView
        android:id="@+id/p_proceed_to_pay_mble"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonshape"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/proceed_topay"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />
    </LinearLayout>


</FrameLayout>
