<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.saxxis.saanpaydestributor.activities.specialities.CheckoutActivity"
    tools:showIn="@layout/activity_checkout">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
       android:paddingTop="@dimen/activity_vertical_margin"
       android:id="@+id/cart_layout">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="9">

           <android.support.v7.widget.RecyclerView
               android:id="@+id/checkout_list"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:scrollbars="none" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:orientation="vertical"
           android:layout_weight="1">

           <TextView
               android:id="@+id/sub_total"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="14sp"
               android:textStyle="bold"
               android:text="@string/sub_total"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:gravity="bottom"
           android:layout_weight="1">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <Button
                   android:id="@+id/shopping"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:background="@color/colorPrimaryDark"
                   android:text="@string/continue_shopping"
                   android:textAllCaps="false"
                   android:textColor="@color/colorWhite" />

               <Button
                   android:id="@+id/checkout"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:layout_weight="1"
                   android:background="@color/colorPrimaryDark"
                   android:text="@string/checkout"
                   android:textAllCaps="false"
                   android:textColor="@color/colorWhite" />

           </LinearLayout>

       </LinearLayout>

   </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:id="@+id/no_items"
      android:visibility="gone"
      android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="No Items in Cart..Start Shopping"/>

      <Button
          android:id="@+id/cont_shopp"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minWidth="250dp"
          android:layout_margin="15dp"
          android:background="@color/colorPrimaryDark"
          android:text="@string/continue_shopping"
          android:textAllCaps="false"
          android:textColor="@color/colorWhite" />
  </LinearLayout>
</FrameLayout>
